# simple_conventer_app_django

./: README.md  pyproject.toml
conventer_app/: manage.py
conventer_app/app/: urls.py  views.py
conventer_app/conventer_app/: asgi.py  settings.py  urls.py  wsgi.py
conventer_app/static/css/: style.css
conventer_app/templates/: base.html
