[tool.poetry]
name = "conventer-app"
version = "0.1.0"
description = "Conventer_app"
authors = ["Sen Senpo"]
readme = "README.md"
packages = [{include = "conventer_app"}]

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.1.3"
django-grappelli = "^3.0.4"
requests = "^2.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
